--- a/meson.build
+++ b/meson.build
@@ -5,8 +5,7 @@ common_sources = [
     'src/control.cpp',
     'src/reservation_station.cpp',
     'src/reorder_buffer.cpp',
-    'src/insn.cpp',
-    'src/execution_unit.cpp'
+    'src/insn.cpp'
 ]
 executable('sim', ['src/main.cpp'] + common_sources, dependencies: libfmt, include_directories: incdir)
 executable('testrunner', ['src/test.cpp'] + common_sources, dependencies: libfmt, include_directories: incdir)
