Moved forwarding into lsq file

--- a/meson.build
+++ b/meson.build
@@ -6,7 +6,8 @@ common_sources = [
     'src/reservation_station.cpp',
     'src/reorder_buffer.cpp',
     'src/insn.cpp',
-    'src/execution_unit.cpp'
+    'src/execution_unit.cpp',
+    'src/lsq.cpp'
 ]
 executable('sim', ['src/main.cpp'] + common_sources, dependencies: libfmt, include_directories: incdir)
 executable('testrunner', ['src/test.cpp'] + common_sources, dependencies: libfmt, include_directories: incdir)
